[tool.poetry]
name = "cahier"
version = "0.1.0"
description = ""
authors = ["Rodrigo Belli <bellirodrigo2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pylint = "^3.2.3"
flake8 = "^7.0.0"
poethepoet = "^0.26.1"
ruff = "^0.4.8"

[tool.poetry.group.sqlback.dependencies]
sqlalchemy = "^2.0.30"

[tool.poe.tasks]
# run poe 'task'
test = "pytest -s"
dev = 'fastapi dev ./cahier/main.py'
run = 'fastapi run ./cahier/main.py'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"