[tool.poetry]
name = "cahier"
version = "0.1.0"
description = ""
authors = ["Rodrigo Belli <bellirodrigo2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pylint = "^3.2.3"
flake8 = "^7.0.0"
poethepoet = "^0.26.1"
ruff = "^0.4.8"
black = "^24.4.2"
isort = "^5.13.2"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.4.26"
pep8-naming = "^0.14.1"
mccabe = "^0.7.0"

[tool.poetry.group.sqlback.dependencies]
sqlalchemy = "^2.0.30"

[tool.poe.tasks]
#>>> poe 'task'
test = "pytest -s"
dev = 'fastapi dev ./cahier/main.py'
run = 'fastapi run ./cahier/main.py'
blackall = 'black ./cahier/'
isortall = 'isort ./cahier'
format = ['blackall', 'isortall']
flake8 = 'flake8 ./cahier'
mypy = 'mypy ./cahier'
ruff = 'ruff ./cahier'
# lint = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"